# mlops-hestnet

./: .gcloudignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  tasks.py
.devcontainer/: Dockerfile  devcontainer.json  gpu.dockerfile
.github/workflows/: code_formatting.yaml  tests.yaml
configs/: config.yaml  preprocess.yaml
configs/callbacks/: LLMjudgecallback.yaml  batchespersecond.yaml  batchsizefinder.yaml  dummy_callbacks.yaml  earlystopping.yaml  example.yaml  frechetdistance.yaml  learningratemonitor.yaml  llm_callbacks.yaml  loggrad.yaml  logloss.yaml  modelcheckpoint.yaml  richprogressbar.yaml  swa.yaml  textcallback.yaml  timer.yaml
configs/data/: all_text.yaml  all_text_short.yaml  dummy_data.yaml  gigaword.yaml  gigaword_data.yaml
configs/experiment/: dummy.yaml  example_llm_test.yaml  hestnet.yaml  llm.yaml  llm_multi_gpu.yaml  template.yaml
configs/logger/: default.yaml
configs/model/: dummy_model.yaml  hestnet.yaml  llm.yaml  muon.yaml
configs/sweeps/: dummy.yaml  llm.yaml
configs/trainer/: cpu.yaml  gpu.yaml  multi_gpu.yaml
configs/vertex/: cloudbuild.yaml  config_vertex.yaml  vertex_ai_train.yaml
latex/: zotero.py
reports/: README.md  report.html  report.py
scripts/: example_train.py
src/: __init__.py  utils.py
src/app/: api.dockerfile  api.py  cloudbuild.yaml  requirements_api.txt
src/app/templates/: index.html
src/callbacks/: LLM_judge_callback.py  __init__.py  batches_per_second.py  ema_callback.py  frechet_distance_callback.py  log_gradients.py  log_loss_callback.py  log_model_callback.py  metrics.py  text_callback.py  utils.py
src/data_modules/: __init__.py  base_dm.py  gigaword_dm.py
src/datasets/: __init__.py  basedataset.py  dummy.py  gigaword.py  nordjylland_news.py  preprocess.py  reddit_da.py  textdataset.py  tokenization.py  tokenizers.py  utils.py
src/lightning_modules/: __init__.py  baselightningmodule.py  dummy.py  gigaword.py  hestnet.py  llm.py
src/losses/: __init__.py  baseloss.py  llm_loss.py  mse.py
src/networks/: __init__.py  dummy.py  hestnet.py  pretrained.py  transformer.py
src/tests/: conftest.py  test_HestNet.py  test_apis.py  test_callback.py  test_datasets.py  test_networks.py
src/tests/performancetests/: locustfile.py
