[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "mlops-hestnet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.2",
    "dotenv>=0.9.9",
    "dvc[gdrive]>=3.66.0",
    "fastapi",
    "gdown>=5.2.0",
    "google-genai>=1.59.0",
    "httpx>=0.28.1",
    "hydra-core==1.3.2",
    "invoke>=2.2.1",
    "ipykernel>=7.1.0",
    "locust>=2.43.1",
    "matplotlib==3.10.8",
    "mnist==0.2.2",
    "numpy>=2.2.0",
    "omegaconf==2.3.0",
    "pre-commit>=4.5.1",
    "python-multipart",
    "pytorch-lightning==2.6.0",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "sentence-transformers>=5.2.0",
    "torch==2.9.1",
    "torch-ema==0.3",
    "transformers>=4.57.3",
    "types-requests>=2.32.4.20250913",
    "uvicorn",
    "wandb==0.23.0",
]

[dependency-groups]
dev = [
    "coverage>=7.13.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

[tool.ruff.lint.isort]
known-third-party = ["wandb", "hydra"]

[tool.mypy]
disable_error_code = ["override", "assignment"]
ignore_missing_imports = true

[tool.ruff]
line-length=120

[tool.coverage.run]
source = ["src"]  # Only measure coverage for code in src/
omit = [          # Don't measure coverage for these patterns:
    "*/tests/*",           # Test files
    "*/test_data/*",       # Test data
    "*/site-packages/*",   # Third-party packages
    "*/.cache/*",          # Cache directories
    "*/datasets/*",        # Dataset files
    "*/data/*",            # Data directories
    "*/models/*",          # Model files
    "*/__pycache__/*",     # Python cache
    "*/.venv/*",           # Virtual environment
    "*/_remote_module_non_scriptable.py",  # PyTorch temp module
]
